crates/tribute-passes/src/native/snapshots/tribute_passes__native__adt_to_clif__tests__ref_cast_to_clif.snap
---
source: crates/tribute-passes/src/native/adt_to_clif.rs
assertion_line: 437
expression: result
---
core.module @test {
  func.func @test_fn() -> core.ptr {
      %0 = clif.iconst {value = 100} : core.ptr
      func.return %0
  }
}
