crates/tribute-passes/src/native/snapshots/tribute_passes__native__adt_to_clif__tests__ref_is_null_to_clif.snap
---
source: crates/tribute-passes/src/native/adt_to_clif.rs
expression: result
---
core.module @test {
  func.func @test_fn() -> core.i32 {
      %0 = clif.iconst {value = 42} : core.ptr
      %1 = clif.iconst {value = 0} : core.ptr
      %2 = clif.icmp %0, %1 {cond = "eq"} : core.i8
      %3 = clif.uextend %2 : core.i32
      func.return %3
  }
}
