crates/tribute-passes/src/native/snapshots/tribute_passes__native__adt_to_clif__tests__struct_get_to_clif.snap
---
source: crates/tribute-passes/src/native/adt_to_clif.rs
assertion_line: 395
expression: result
---
core.module @test {
  func.func @test_fn() -> core.i32 {
      %0 = clif.iconst {value = 0} : core.ptr
      %1 = clif.load %0 {offset = 4} : core.i32
      func.return %1
  }
}
