crates/tribute-passes/src/native/snapshots/tribute_passes__native__adt_to_clif__tests__struct_set_to_clif.snap
---
source: crates/tribute-passes/src/native/adt_to_clif.rs
assertion_line: 410
expression: result
---
core.module @test {
  func.func @test_fn() -> core.nil {
      %0 = clif.iconst {value = 0} : core.ptr
      %1 = clif.iconst {value = 42} : core.i32
      clif.store %1, %0 {offset = 0}
      func.return
  }
}
